projects/aws/01-aws-web-infrastructure/security.tf
resource "aws_security_group" "web" {
  name        = "${local.name_prefix}-web-sg"
  description = "Security Group for web server"
  vpc_id      = aws_vpc.main.id

  #HTTP
  ingress {
    description = "Allow HTTP  from the internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #HTTPS
  ingress {
    description = "Allow HTTPS from the internet"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  #SSH
  ingress {
    description = "Allow SSH from my public IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.allowed_ssh_cidr]
  }

  #Outbound traffic
  egress {
    description = "Allow all outbout traffic"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(local.common_tags, {
    Name = "${local.name_prefix}-web-sg"
  })
}
